# super-api

./: Cargo.toml  readme.md
src/: config.rs  error.rs  main.rs  party1.html  party2.html  prelude.rs  snowflake.rs  test.html
src/extractors/: mod.rs  user_request.rs
src/gateway/: mod.rs
src/middlewares/: auth.rs  mod.rs
src/routes/: auth.rs  mod.rs
src/routes/party/: messages.rs  mod.rs  video.rs
src/structures/: message.rs  mod.rs  party.rs  session.rs  snowflake.rs  state.rs  user.rs  video.rs
