[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros", "ws"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
thiserror = "1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "^0.21"
chrono = { version = "0.4.19", features = ["serde"] }
rs-snowflake = "0.6.0"
futures = "0.3"
socketioxide = { version = "0.10.2", features = ["extensions", "state"] }
tower-http = { version = "0.5.1", features = ["cors"] }
jsonwebtoken = "9.2.0"
serde_with = { version = "3.6.0", features = ["json"] }
